fix config loading