@@ -80,7 +80,7 @@ public class ConfigManager {
 
         try {
             loadConfig();
-        } catch (IllegalAccessException | InstantiationException | IOException e) {
+        } catch (IllegalAccessException | InstantiationException | IOException | InvocationTargetException | NoSuchMethodException e) {
             throw new RuntimeException(e);
         }
     }
@@ -93,26 +93,32 @@ public class ConfigManager {
         }
     }
 
-    public synchronized void convertConfigFormat() throws IllegalAccessException, InstantiationException, InvocationTargetException, NoSuchMethodException {
+    protected synchronized void convertOrLoadConfigs() throws IllegalAccessException, InstantiationException, InvocationTargetException, NoSuchMethodException, IOException {
         for (Map.Entry<String, Class<?>> optionClass : optionClasses.entrySet()) {
-            convertConfigFormat(optionClass.getValue());
+            try {
+                convertOrLoadConfig(optionClass.getKey(), optionClass.getValue());
+            } catch (Exception e) {
+                backupConfig();
+                LOGGER.error("Failed to load option " + optionClass.getKey(), e);
+                options.put(optionClass.getValue(), optionClass.getValue().getConstructor().newInstance());
+            }
+            try {
+                Field f = optionClass.getValue().getDeclaredField("runner");
+                f.setAccessible(true);
+                f.set(options.get(optionClass.getValue()), runner);
+            } catch (NoSuchFieldException ignored) {}
         }
         rawOptions.addProperty("version", 3);
     }
 
-    public synchronized void convertConfigFormat(Class<?> clazz) throws IllegalAccessException, InstantiationException, InvocationTargetException, NoSuchMethodException {
+    protected synchronized void convertOrLoadConfig(String key, Class<?> clazz) throws IllegalAccessException, InstantiationException, InvocationTargetException, NoSuchMethodException {
         try {
             Method m = clazz.getDeclaredMethod("fromV" + loadedAsVers, JsonObject.class);
             Object option = clazz.getDeclaredConstructor().newInstance();
             m.invoke(option, rawOptions);
             options.put(clazz, option);
-            try {
-                Field f = option.getClass().getDeclaredField("runner");
-                f.setAccessible(true);
-                f.set(option, runner);
-            } catch (NoSuchFieldException ignored) {}
         } catch (NoSuchMethodException ignored) {
-            options.put(clazz, clazz.getDeclaredConstructor().newInstance());
+            options.put(clazz, gson.fromJson(rawOptions.get(key), clazz));
         }
     }
 
@@ -124,69 +130,51 @@ public class ConfigManager {
         return (T) options.get(optionClass);
     }
 
-    public synchronized void addOptions(String key, Class<?> optionClass) throws IllegalAccessException, InstantiationException {
+    public synchronized void addOptions(String key, Class<?> optionClass) throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         if (optionClasses.containsKey(key)) {
             throw new IllegalStateException("Key \"" + key + "\" already in config manager!");
         }
         optionClasses.put(key, optionClass);
         try {
-            convertConfigFormat(optionClass);
+            convertOrLoadConfig(key, optionClass);
         } catch (Exception ex) {
-            ex.printStackTrace();
-            options.put(optionClass, optionClass.newInstance());
+            LOGGER.error("Failed to load option " + key, ex);
+            options.put(optionClass, optionClass.getConstructor().newInstance());
             saveConfig();
         }
+        if (options.get(optionClass) == null) {
+            options.put(optionClass, optionClass.getConstructor().newInstance());
+        }
+        try {
+            Field f = optionClass.getDeclaredField("runner");
+            f.setAccessible(true);
+            f.set(options.get(optionClass), runner);
+        } catch (NoSuchFieldException ignored) {}
     }
 
-    public synchronized void loadConfig() throws IllegalAccessException, InstantiationException, IOException {
+    public synchronized void backupConfig() throws IOException {
+        final File back = new File(configFolder, "options.json.v" + loadedAsVers + ".bak");
+        if (back.exists()) {
+            back.delete();
+        }
+        Files.move(configFile, back);
+        saveConfig();
+    }
+
+    public synchronized void loadConfig() throws IllegalAccessException, InstantiationException, IOException, InvocationTargetException, NoSuchMethodException {
+        options.clear();
+        if (rawOptions == null) {
+            reloadRawConfigFromFile();
+        }
         try {
-            options.clear();
-            if (rawOptions == null) {
-                reloadRawConfigFromFile();
-            }
-            try {
-                convertConfigFormat();
-            } finally {
-                if (loadedAsVers != 3) {
-                    final File back = new File(configFolder, "options.json.v" + loadedAsVers + ".bak");
-                    if (back.exists()) {
-                        back.delete();
-                    }
-                    Files.move(configFile, back);
-                    saveConfig();
-                }
-            }
-            if (loadedAsVers != 1) {
-                for (Map.Entry<String, Class<?>> optionClass : optionClasses.entrySet()) {
-                    Object instance;
-                    try {
-                        if (!rawOptions.has(optionClass.getKey())) {
-                            throw new NullPointerException();
-                        }
-                        options.put(optionClass.getValue(), instance = gson.fromJson(rawOptions.get(optionClass.getKey()), optionClass.getValue()));
-                    } catch (JsonSyntaxException | NullPointerException ignored) {
-                        options.put(optionClass.getValue(), instance = optionClass.getValue().getConstructor().newInstance());
-                        saveConfig();
-                    }
-                    try {
-                        Field f = instance.getClass().getDeclaredField("runner");
-                        f.setAccessible(true);
-                        f.set(instance, runner);
-                    } catch (NoSuchFieldException ignored) {}
-                }
-            }
-        } catch (Exception e) {
-            LOGGER.error("Config Failed To Load.");
-            e.printStackTrace();
-            if (configFile.exists()) {
-                final File back = new File(configFolder, "options.json.bak");
-                if (back.exists()) {
-                    back.delete();
-                }
-                Files.move(configFile, back);
-            }
+            convertOrLoadConfigs();
+        } catch (InvocationTargetException | NoSuchMethodException e) {
+            LOGGER.error("Failed to load config", e);
             loadDefaults();
-            saveConfig();
+        } finally {
+            if (loadedAsVers != 3) {
+                backupConfig();
+            }
         }
         LOGGER.info("Loaded Profiles:");
         for (String key : getOptions(CoreConfigV2.class).profileOptions()) {
@@ -195,9 +183,9 @@ public class ConfigManager {
 
     }
 
-    public void loadDefaults() throws IllegalAccessException, InstantiationException {
+    public void loadDefaults() throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         for (Map.Entry<String, Class<?>> optionClass : optionClasses.entrySet()) {
-            options.put(optionClass.getValue(), optionClass.getValue().newInstance());
+            options.put(optionClass.getValue(), optionClass.getValue().getConstructor().newInstance());
             rawOptions = new JsonObject();
             rawOptions.addProperty("version", 2);
         }
